--- a/var/www/public/css/index.css
+++ b/var/www/public/css/index.css
@@ -39,6 +39,35 @@ body .pg {
   margin: 0 auto;
 }
 
+.pg .cvs-wrp {
+  position: relative;
+  height: 85%;
+}
+
+.pg .svg-wrp {
+  height: 15%;
+}
+
+.svg-wrp .svg-fig {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.svg-wrp .svg-fig > .svg-obj {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-image: url('../img/base.png');
+  background-attachment: local;
+  background-position: top left;
+  background-origin: center;
+  background-repeat: repeat no-repeat;
+  background-size: contain;
+}
+
 .pg .cvs,
 .pg .cvs + .cvs {
   position: absolute;
